Modified calculateHash helper method.
Removed a dependency and replaced it with standard JDK implementation.